fix: defer SZoning1 confirm ~450ms to match retail Zoning1→confirm gap
SZoning1 confirm burst is now byte-identical to retail (marker +
1-byte-id NPC roster + 0x23, verified sub-by-sub vs crossing D)
yet the client still never sends Zoning2. pcap analysis of the
C→S side: our client keeps streaming position (0x03 1f00003d
every ~50ms, increasing seqs) AND bundles Zoning1 into that
stream, then resets its own send counter at +0.8s. Retail's
client instead goes SILENT the instant it sends Zoning1
(standalone, sim frozen for the transition) for ~500ms, then
Zoning2.

Difference: retail emits the confirm ~450ms after Zoning1
(consistent across all 8 crossings); we emitted it at +4ms —
while the client is still mid-trigger and hasn't frozen its
simulation — so it's discarded/ignored and the client never
enters the preload→Zoning2 state.

Defer the confirm via SZoning1ConfirmEvent (+450ms) so it lands
when the client is actually waiting for it. Test rewritten to
pin: Zoning1 emits zero synchronous TCP/UDP and enqueues
SZoning1ConfirmEvent which, when driven, emits exactly one
SZoning1. Full suite 1021 green.